2012-12-10  Per Bothner  <per@bothner.com>

	* webtest/info/+default+: Minor tweaks.

2012-11-29  Per Bothner  <per@bothner.com>

	* lib-test.scm: Some more vector and bytevectors tests from R7RS.

2012-11-21  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST): Add jmc.expected.

2012-11-20  Per Bothner  <per@bothner.com>

	* lib-test.scm: SOme more tests of vector functions.

	* lib-test.scm: Add a vector-fill! test

2012-11-18  Per Bothner  <per@bothner.com>

	* MyFunc.java (MyFunc): Add SourceName attribute.

2012-11-09  Per Bothner  <per@bothner.com>

	* num-test.scm: Add tests for comparing exact infinite rationals.

2012-11-06  Alex Moiseenko <imdagger>

	* sva37684.scm: New test case for Savannah bug #37684
	"Nested class types of fields".
	* Makefile.am: Update accordingly.

2012-11-05  Per Bothner  <per@bothner.com>

	* annotations1-bytecode.expected: Update.

2012-11-02  Per Bothner  <per@bothner.com>

	* module2.scm: Add a define-alias to test that module-implements
	works with an alias.

2012-10-21  Per Bothner  <per@bothner.com>

	* xml-test.scm: New test-suite.
	* Makefile.am (check-xml): Update accordingly.

2012-10-07  Helmut Eller  <eller.helmut@gmail.com>
	    Per Bothner  <per@bothner.com>

	* sva36863.scm: New test, based on Savannah bug #36863
	"then clause grows stack with no else clause".
	* Makefile.am: Update accordingly.

2012-10-06  Per Bothner  <per@bothner.com>

	* unreach1.scm: Added or improved tests for unreachable code.
	* unreach3.scm: Likewise.
	* inlining.expected: Update.

2012-09-27  Per Bothner  <per@bothner.com>

	Add tests of separate compilation of define-alias of classes.
	* classes1.scm (my-id-class-2): New type alias of simple class.
	* classes2.scm (my-id-instance-2): Test use of my-id-class-2.
	* module1a.scm (jlString): Type alias of existing class.
	* module2.scm (length-diff1): Test use of jlString.
	* classes2.scm (cls-d): New type alias of non-simple class.
	* obj-test.scm: Test cls-d.
