@@ -1,24 +1,24 @@
 (define (bar1)
-  (if (primitive-throw java.lang.NullPointerException) (list 23) 11))
-;; Diagnostic: unreach1.scm:2:56: warning - unreachable code
+  (if (primitive-throw (java.lang.NullPointerException)) (list 23) 11))
+;; Diagnostic: unreach1.scm:2:58: warning - unreachable code
 
 (define (bar2)
-  (list (primitive-throw java.lang.NullPointerException) 12 13))
+  (list (primitive-throw (java.lang.NullPointerException)) 12 13))
 ;; Diagnostic: unreach1.scm:6:3: warning - unreachable procedure call
 ;; Diagnostic: unreach1.scm:6:9: note - this operand never finishes
 
 (define (bar3)
-  (list 12 (primitive-throw java.lang.NullPointerException) (sqrt 13)))
+  (list 12 (primitive-throw (java.lang.NullPointerException)) (sqrt 13)))
 ;; Diagnostic: unreach1.scm:11:3: warning - unreachable procedure call
 ;; Diagnostic: unreach1.scm:11:12: note - this operand never finishes
 
 (define (bar4)
-  (primitive-throw java.lang.NullPointerException)
+  (primitive-throw (java.lang.NullPointerException))
   13)
 ;; Diagnostic: unreach1.scm:17:3: warning - unreachable code
 
 (define (bar5)
-  (begin (primitive-throw java.lang.NullPointerException)
+  (begin (primitive-throw (java.lang.NullPointerException))
          13))
 ;; Diagnostic: unreach1.scm:22:10: warning - unreachable code
 
