@@ -1,3 +1,9 @@
+2012-12-15  Per Bothner  <per@bothner.com>
+
+	* unreach1.scm: Fix erroneous calls to primitive-throw.
+	* errors2.scm: New test for bad primitive-throw.
+	* Makefile.am: Update accordingly.
+
 2012-12-10  Per Bothner  <per@bothner.com>
 
 	* webtest/info/+default+: Minor tweaks.
